# nucleob

./: Cargo.toml  NOTICE  README.md  snapcraft.yaml
src/: main.rs  menu.rs  stat.rs
src/stat/: amino_acids.rs  nucleobases.rs
