[package]
name = "nucleob"
version = "1.1.0"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "bioinformatics: nucleobases and amino acids statistics"
readme = "README.md"
repository = "https://github.com/piotrbajdek/nucleob"
license = "MIT"
keywords = ["bioinformatics", "DNA", "genetics", "protein", "RNA"]
categories = ["command-line-utilities", "filesystem", "science"]

[profile.release]
codegen-units = 1
strip = true

[package.metadata.generate-rpm]
assets = [
{ source = "target/release/nucleob", dest = "/usr/bin/nucleob", mode = "755" }
]
